fix: images overflowing on toolkit and inclusive design pages
This writes CSS to prevent image overflows on both the Toolkit landing page and on the Inclusive Design page. It also specifies an aspect ratio for profile photos.

Closes #131

--- a/blocks/collaborators/collaborators.css
+++ b/blocks/collaborators/collaborators.css
@@ -1,13 +1,12 @@
 .collaborators {
   background-color: var(--color-base-light-rose);
   grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: repeat(6, [col-start] 1fr);
 }
 
 .cmp-collaborators__inner-wrap {
-  display: grid;
-  grid-template-columns: repeat(6, [col-start] 1fr);
-  column-gap: 12px;
-  row-gap: 12px;
+  grid-column: 2 / -2;
   padding-top: 4rem;
 }
 
@@ -18,6 +17,7 @@
 
 .cmp-collaborator picture {
   aspect-ratio: 1 / 1;
+  overflow: hidden;
 }
 
 .cmp-collaborator img {
@@ -81,6 +81,9 @@
   
   .cmp-collaborators__inner-wrap {
     grid-column: 2 / -2;
+    column-gap: 12px;
+    row-gap: 12px;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
 
